fully functional with home page.  need to add descriptions and imgs to scraped articles

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,11 @@
 <div class="topnav">
-    
-    <a class = "active" routerLink= "all">All</a>
-    <a routerLink= "guardian">The Guardian</a>
-    <a routerLink= "msnbc">MSNBC</a>
-    <a routerLink= "fox">Fox News</a>
-    <a routerLink= "abc">ABC News</a>
+
+    <a class="active" routerLink="home">Home</a>
+    <a routerLink="guardian">The Guardian</a>
+    <a routerLink="nbc">NBC</a>
+    <a routerLink="fox">Fox News</a>
+    <a routerLink="abc">ABC News</a>
+    <a routerLink="cnn">CNN</a>
+    <a routerLink="nyt">The New York Times</a>
+    <a routerLink="washingtonPost">The Washington Post</a>
 </div>
