--- a/src/app/abc/abc.component.css
+++ b/src/app/abc/abc.component.css
@@ -1,6 +1,32 @@
 .header {
     padding: 80px;
     text-align: center;
-    background: url("https://www.teahub.io/photos/full/2-24095_free-art-wallpaper-background-color.jpg")
+    background: url("https://media.tvnewscheck.com/wp/content/uploads/2019/10/ABC_News_Logo_2.jpg") no-repeat center/cover;
     
   }
+  body {
+    box-sizing: border-box;
+   
+    
+  }
+
+h4 {
+    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    height: 12px;
+    letter-spacing: unset;
+    margin: 0 0 0.5rem;
+    text-transform: uppercase;
+    transition: opacity .25s ease-in-out;
+}
+h2 {
+    color: #2a2a2a;
+    font-family: FoundersGroteskCond,Arial Narrow,Arial;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1;
+    margin: 0 0 0.5rem;
+    transition: opacity .25s ease-in-out;
+}
