--- a/src/app/fox/fox.component.css
+++ b/src/app/fox/fox.component.css
@@ -1,6 +1,31 @@
 .header {
     padding: 80px;
     text-align: center;
-    background: url("https://www.teahub.io/photos/full/2-24095_free-art-wallpaper-background-color.jpg")
+    background: url("https://www.allsides.com/sites/default/files/og-fox-news.png")no-repeat center/cover;
     
   }
+  body {
+    box-sizing: border-box;
+   
+    
+  }
+h4 {
+    color: #3061ff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    height: 12px;
+    letter-spacing: unset;
+    margin: 0 0 0.5rem;
+    text-transform: uppercase;
+    transition: opacity .25s ease-in-out;
+}
+h2 {
+    color: #2a2a2a;
+    font-family: FoundersGroteskCond,Arial Narrow,Arial;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1;
+    margin: 0 0 0.5rem;
+    transition: opacity .25s ease-in-out;
+}
