--- a/src/app/fox/fox.component.html
+++ b/src/app/fox/fox.component.html
@@ -4,24 +4,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+
+<div class="header">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button (click)="fetchFox()">Show All Articles
+    </button>
+</div>
+
+
+
+
 <body>
-    <div class="header">
-        <h1>Fox News</h1>
-        <p> Up to date news from Fox News</p>
-        <button (click)="fetchFox()">Show All Articles
-        </button>
-    </div>
+   
+    <div *ngFor="let event of events$ | async">
 
-    <div class="w3-content">
-
-        <div class="w3-row w3-margin">
+        <div class="w3-content">
+      
+          <div class="w3-row w3-margin">
             <div class="w3-third">
             </div>
-            <div *ngFor="let event of events$ | async">
-                <div class="w3-twothird w3-container">
-                    <h2>{{event.title}}</h2>
-                    <button><a href="{{event.url}}">Article Link</a></button>
-                </div>
-
-            </div>
-        </div>
+              <div class="w3-twothird w3-container">
+                  <br>
+                  <h4>FOX News</h4>
+                <h2>{{event.title}}</h2>          
+                <button><a href="{{event.url}}">Article Link</a></button>
+              </div>
+          </div>
