--- a/src/app/nbc/nbc.component.html
+++ b/src/app/nbc/nbc.component.html
@@ -1,17 +1,29 @@
 
 <!DOCTYPE html>
 <html>
-<title>MSNBC</title>
+<title>NBC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+
+
+<div class="header">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <button (click)="fetchNbc()">Show All Articles
+  </button>
+</div>
+
 <body>
-  <div class="header">
-    <h1>MSNBC</h1>
-    <p> Up to date news from MSNBC</p>
-    <button (click)="fetchMsnbc()">Show All Articles
-    </button>
-  </div>
+
 
   <div class="w3-content">
 
@@ -20,6 +32,7 @@
       </div>
       <div *ngFor="let event of events$ | async">
         <div class="w3-twothird w3-container">
+          <h4>NBC News</h4>
           <h2>{{event.title}}</h2>          
           <button><a href="{{event.url}}">Article Link</a></button>
         </div>
