--- a/src/app/nyt/nyt.component.css
+++ b/src/app/nyt/nyt.component.css
@@ -1,11 +1,8 @@
 .header {
     padding: 80px;
     text-align: center;
-    background: url("https://media.info/i/tb/1456/1542022949/28342308.jpg") no-repeat center/cover;
+    background: url("https://static01.nyt.com/newsgraphics/images/icons/defaultPromoCrop.png")no-repeat center/cover;
     
-  }
-  button{
-    text-align: center;
   }
   body {
     box-sizing: border-box;
@@ -13,8 +10,8 @@
     
   }
 h4 {
-    color: rgb(0, 119, 255);
-    font-family: Arial, Helvetica, sans-serif;
+    color: #3061ff;
+    font-family: 'cursive';
     font-size: 12px;
     font-weight: 400;
     height: 12px;
