fully functional. would like to find a way to add like on facebook and email option

--- a/src/app/cnn/cnn.component.css
+++ b/src/app/cnn/cnn.component.css
@@ -29,3 +29,9 @@ h2 {
     margin: 0 0 0.5rem;
     transition: opacity .25s ease-in-out;
 }
+.disclaimer{
+  text-align: center;
+}
+.disclaimer {
+  text-align: center;
+}
