--- a/src/app/abc/abc.component.html
+++ b/src/app/abc/abc.component.html
@@ -7,6 +7,10 @@
 
 
 <div class="header">
+  <!-- not the prettiest with the line breaks but was a temporary easy fix  -->
+  <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
@@ -21,7 +25,7 @@
 </div>
 
 <body>
-  
+ 
 
     <div *ngFor="let event of events$ | async">
 
@@ -34,6 +38,6 @@
                   <br>
                   <h4>ABC News</h4>
                 <h2>{{event.title}}</h2>          
-                <button><a href="{{event.url}}">Article Link</a></button>
+                <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
               </div>
           </div>
