--- a/src/app/guardian/guardian.component.css
+++ b/src/app/guardian/guardian.component.css
@@ -32,3 +32,9 @@ h2 {
     margin: 0 0 0.5rem;
     transition: opacity .25s ease-in-out;
 }
+a {
+  text-decoration: none;
+}
+.disclaimer {
+  text-align: center;
+}
