--- a/src/app/guardian/guardian.component.html
+++ b/src/app/guardian/guardian.component.html
@@ -9,15 +9,19 @@
 
     <div class="header">
       <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
   
   <button (click)="fetchGuardian()">View Articles</button>
     </div>
@@ -25,7 +29,7 @@
 
 
     <body>
-   
+
       
       <div *ngFor="let event of events$ | async">
 
@@ -36,8 +40,9 @@
             </div>
               <div class="w3-twothird w3-container">
                   <br>
-                  <h4>NBC News</h4>
+                  <h4>The Guardian</h4>
                 <h2>{{event.title}}</h2>          
-                <button><a href="{{event.url}}">Article Link</a></button>
+                <!-- <button><a href="{{event.url}}">Article Link</a></button> -->
+                <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
               </div>
           </div>
