--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
 				<div class="col-md-6 pt-6 pb-6 align-self-center">
 					<h1 class="secondfont mb-3 font-weight-bold">The Daily Fetch</h1>
 					<p class="mb-3">
-						Bringing all of your favorie news articles to one location
+						Up to date news source for your daily dose of politics.
 					</p>
 				</div>
 				<div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(https://www.jdrf.org/norcal/wp-content/uploads/sites/95/2017/10/news.jpg);">	</div>
@@ -44,7 +44,7 @@
 					</p>
 					<div>
 						<small class="d-block"><a class="text-muted" href="https://www.washingtonpost.com/politics/2022/02/02/supreme-court-biden-vacancy/">Favid Rick</a></small>
-						<small class="text-muted">  Mike DeBonis &middot; February 2, 2022</small>
+						<small class="text-muted"> Author: Mike DeBonis </small>
 					</div>
 				</div>
 			</div>
@@ -58,9 +58,8 @@
 						<a class="text-dark" href="https://www.nytimes.com/2022/02/02/us/politics/republicans-impeach-trump-primary-fund-raising.html">Republicans Who Voted to Impeach Trump Out-Raised Primary Rivals</a>
 						</h2>
 						<div class="card-text text-muted small">
-              CATIE EDMONDSON
+							Author: CATIE EDMONDSON
 						</div>
-						<small class="text-muted"> &middot; 5 min read</small>
 					</div>
 				</div>
 				<div class="mb-3 d-flex align-items-center">
@@ -70,7 +69,7 @@
 						<a class="text-dark" href="https://www.nytimes.com/2022/02/02/us/politics/trump-jan-6-memos.html">Memos Show Roots of Trump’s Focus on Jan. 6 and Alternate Electors</a>
 						</h2>
 						<div class="card-text text-muted small">
-              By ALAN FEUER, MAGGIE HABERMAN and LUKE BROADWATER
+							Author: ALAN FEUER, MAGGIE HABERMAN and LUKE BROADWATER
 						</div>
 					</div>
 				</div>
@@ -81,7 +80,7 @@
 						<a class="text-dark" href="https://www.cnn.com/2022/01/20/politics/fact-check-biden-news-conference-january-2022/index.html">Fact-checking six claims from Biden's news conference</a>
 						</h2>
 						<div class="card-text text-muted small">
-              Daniel Dale
+							Author: Daniel Dale
 						</div>
 					</div>
 				</div>
