--- a/src/app/nbc/nbc.component.html
+++ b/src/app/nbc/nbc.component.html
@@ -18,24 +18,24 @@
   <br>
   <br>
   <br>
-  <button (click)="fetchNbc()">Show All Articles
+  <button (click)="fetchNbc()">View Articles
   </button>
 </div>
 
 <body>
 
 
-  <div class="w3-content">
+  <div *ngFor="let event of events$ | async">
 
-    <div class="w3-row w3-margin">
-      <div class="w3-third">
-      </div>
-      <div *ngFor="let event of events$ | async">
-        <div class="w3-twothird w3-container">
-          <h4>NBC News</h4>
-          <h2>{{event.title}}</h2>          
-          <button><a href="{{event.url}}">Article Link</a></button>
+    <div class="w3-content">
+  
+      <div class="w3-row w3-margin">
+        <div class="w3-third">
         </div>
-
+          <div class="w3-twothird w3-container">
+              <br>
+              <h4>NBC News</h4>
+            <h2>{{event.title}}</h2>          
+            <a class="btn btn-primary" href="https://www.nytimes.com{{event.url}}" role="button">Article Link</a>
+          </div>
       </div>
-    </div>
