--- a/src/app/washington-post/washington-post.component.html
+++ b/src/app/washington-post/washington-post.component.html
@@ -22,11 +22,11 @@
     <br>
     <br>
     
-    <button (click)="fetchWashingtonPost()">Show All Articles
+    <button (click)="fetchWashingtonPost()">View Articles
     </button>
   </div>
 <body>
-    
+ 
 
     <div *ngFor="let event of events$ | async">
 
@@ -39,7 +39,7 @@
             <br>
             <h4>The Washigton Post</h4>
           <h2>{{event.title}}</h2>          
-          <button><a href="{{event.url}}">Article Link</a></button>
+          <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
         </div>
     </div>
 
