added facebook share button and descriptions for the articles

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,8 +44,8 @@
             Sen. Bej Ray Luján’s stroke appears relatively minor, but information about his condition has been closely held, fueling speculation about potential challenges for Democrats.
 					</p>
 					<div>
-						<small class="d-block"><a class="text-muted" href="https://www.washingtonpost.com/politics/2022/02/02/supreme-court-biden-vacancy/">Favid Rick</a></small>
-						<small class="text-muted"> Author: Mike DeBonis </small>
+						<small class="d-block"><a class="text-muted" href="https://www.washingtonpost.com/politics/2022/02/02/supreme-court-biden-vacancy/"></a></small>
+						<small class="text-muted"> Author: Seung Min Kim </small>
 					</div>
 				</div>
 			</div>
