--- a/src/app/sources/guardian/guardian.component.css
+++ b/src/app/sources/guardian/guardian.component.css
@@ -38,3 +38,10 @@ a {
 .disclaimer {
   text-align: center;
 }
+h3{
+  color: rgb(63, 63, 63);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.375;
+    padding: 10px 0;
+}
