--- a/src/app/sources/nbc/nbc.component.css
+++ b/src/app/sources/nbc/nbc.component.css
@@ -30,3 +30,11 @@ h2 {
 .disclaimer {
   text-align: center;
 }
+h3{
+  color: rgb(63, 63, 63);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.375;
+    padding: 10px 0;
+}
+
