--- a/src/app/sources/nbc/nbc.component.html
+++ b/src/app/sources/nbc/nbc.component.html
@@ -21,7 +21,7 @@
   <br>
   <br>
   <br>
-  <button (click)="fetchNbc()">View Articles
+  <button class="btn btn-primary" (click)="fetchNbc()">View Articles
   </button>
 </div>
 
@@ -39,6 +39,17 @@
               <br>
               <h4>NBC News</h4>
             <h2>{{event.title}}</h2>          
+            <h3>{{event.desc}}</h3>          
             <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
+            <script>function fbs_click() { u = location.href; t = document.title; window.open('http://www.facebook.com/sharer.php?u=' + encodeURIComponent(u) + '&t=' + encodeURIComponent(t), 'sharer', 'toolbar=0,status=0,width=626,height=436'); return false; }</script>
+            <style>
+              html .fb_share_link {
+                padding: 2px 0 0 20px;
+                height: 16px;
+                background: url(http://static.ak.facebook.com/images/share/facebook_share_icon.gif?6:26981) no-repeat top left;
+              }
+            </style><a rel="nofollow" href="http://www.facebook.com/share.php?u={{event.url}}" onclick="return fbs_click()"
+              target="_blank" class="fb_share_link">Share on Facebook</a>
+  
           </div>
       </div>
