--- a/src/app/sources/nyt/nyt.component.html
+++ b/src/app/sources/nyt/nyt.component.html
@@ -1,41 +1,51 @@
-
 <!DOCTYPE html>
 <html>
 <title>NBC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <div class="header">
-    <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    <button (click)="fetchNyt()">View Articles
-    </button>
-  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <button class="btn btn-primary" (click)="fetchNyt()">View Articles
+  </button>
+</div>
+
 <body>
 
 
   <div *ngFor="let event of events$ | async">
 
     <div class="w3-content">
-  
+
       <div class="w3-row w3-margin">
         <div class="w3-third">
         </div>
-          <div class="w3-twothird w3-container">
-              <br>
-              <h4>The New York Times</h4>
-            <h2>{{event.title}}</h2>          
-            <a class="btn btn-primary" href="https://www.nytimes.com{{event.url}}" role="button">Article Link</a>
-          </div>
+        <div class="w3-twothird w3-container">
+          <br>
+          <h4>The New York Times</h4>
+          <h2>{{event.title}}</h2>
+          <h3>{{event.desc}}</h3>
+          <a class="btn btn-primary" href="https://www.nytimes.com{{event.url}}" role="button">Article Link</a>
+          <script>function fbs_click() { u = location.href; t = document.title; window.open('http://www.facebook.com/sharer.php?u=' + encodeURIComponent(u) + '&t=' + encodeURIComponent(t), 'sharer', 'toolbar=0,status=0,width=626,height=436'); return false; }</script>
+          <style>
+            html .fb_share_link {
+              padding: 2px 0 0 20px;
+              height: 16px;
+              background: url(http://static.ak.facebook.com/images/share/facebook_share_icon.gif?6:26981) no-repeat top left;
+            }
+          </style><a rel="nofollow" href="http://www.facebook.com/share.php?u=https://www.nytimes.com{{event.url}}" onclick="return fbs_click()"
+            target="_blank" class="fb_share_link">Share on Facebook</a>
+        </div>
       </div>
