--- a/src/app/sources/washington-post/washington-post.component.html
+++ b/src/app/sources/washington-post/washington-post.component.html
@@ -1,45 +1,58 @@
-
 <!DOCTYPE html>
 <html>
 <title>The Washington Post</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="washington-post.component.css">
-<script src="//code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="//code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"
+  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <div class="header">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    
-    <button (click)="fetchWashingtonPost()">View Articles
-    </button>
-  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <button class="btn btn-primary" (click)="fetchWashingtonPost()">View Articles
+  </button>
+</div>
+
 <body>
- 
 
-    <div *ngFor="let event of events$ | async">
 
-  <div class="w3-content">
+  <div *ngFor="let event of events$ | async">
 
-    <div class="w3-row w3-margin">
-      <div class="w3-third">
-      </div>
-        <div class="w3-twothird w3-container">
-            <br>
-            <h4>The Washigton Post</h4>
-          <h2>{{event.title}}</h2>          
-          <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
+    <div class="w3-content">
+
+      <div class="w3-row w3-margin">
+        <div class="w3-third">
         </div>
-    </div>
+        <div class="w3-twothird w3-container">
+          <br>
+          <h4>The Washigton Post</h4>
+          <h2>{{event.title}}</h2>
+          <h3>{{event.desc}}</h3>
+          <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
+          <script>function fbs_click() { u = location.href; t = document.title; window.open('http://www.facebook.com/sharer.php?u=' + encodeURIComponent(u) + '&t=' + encodeURIComponent(t), 'sharer', 'toolbar=0,status=0,width=626,height=436'); return false; }</script>
+          <style>
+            html .fb_share_link {
+              padding: 2px 0 0 20px;
+              height: 16px;
+              background: url(http://static.ak.facebook.com/images/share/facebook_share_icon.gif?6:26981) no-repeat top left;
+            }
+          </style><a rel="nofollow" href="http://www.facebook.com/share.php?u={{event.url}}" onclick="return fbs_click()"
+            target="_blank" class="fb_share_link">Share on Facebook</a>
 
+        
+        </div>
+      </div>
