added descriptions and link to news sources

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
   <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <title>Political News Watch</title>
+  <title>Political News Co</title>
   
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
   <!-- Google Font -->
@@ -21,9 +21,9 @@
 		<div class="pl-4 pr-0 h-100 tofront">
 			<div class="row justify-content-between">
 				<div class="col-md-6 pt-6 pb-6 align-self-center">
-					<h1 class="secondfont mb-3 font-weight-bold">Political News Watch</h1>
+					<h1 class="secondfont mb-3 font-weight-bold">Political News Co.</h1>
 					<p class="mb-3">
-						Up to date content about all things politics!
+						Up to date content on all things politics!
 					</p>
 				</div>
 				<div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(https://www.jdrf.org/norcal/wp-content/uploads/sites/95/2017/10/news.jpg);">	</div>
