--- a/src/app/sources/abc/abc.component.html
+++ b/src/app/sources/abc/abc.component.html
@@ -21,7 +21,6 @@
     <br>
     <br>
     <br>
-    <button class="btn btn-primary" (click)="fetchAbc()">View Articles</button>
 </div>
 
 <body>
@@ -36,7 +35,8 @@
             </div>
               <div class="w3-twothird w3-container">
                   <br>
-                  <h4>ABC News</h4>
+                  <h4><a href ="https://abcnews.go.com/">ABC News</a> </h4>
+
                 <h2>{{event.title}}</h2>          
                 <h3>{{event.desc}}</h3>          
                 <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
