--- a/src/app/sources/cnn/cnn.component.html
+++ b/src/app/sources/cnn/cnn.component.html
@@ -21,8 +21,6 @@
     <br>
     <br>
     <br>
-    <button class="btn btn-primary" (click)="fetchCnn()">View Articles
-    </button>
 </div>
 
 <body>
@@ -36,7 +34,8 @@
         </div>
           <div class="w3-twothird w3-container">
               <br>
-              <h4>CNN News</h4>
+              <h4><a href ="https://www.cnn.com/">CNN</a> </h4>
+
             <h2>{{event.title}}</h2>          
             <h3>{{event.desc}}</h3>          
             <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
