--- a/src/app/sources/guardian/guardian.component.html
+++ b/src/app/sources/guardian/guardian.component.html
@@ -23,7 +23,6 @@
       <br>
       <br>
   
-  <button class="btn btn-primary" (click)="fetchGuardian()">View Articles</button>
     </div>
 
 
@@ -40,7 +39,8 @@
             </div>
               <div class="w3-twothird w3-container">
                   <br>
-                  <h4>The Guardian</h4>
+                  <h4><a href ="https://www.theguardian.com/us">The Guardian</a> </h4>
+
                 <h2>{{event.title}}</h2>          
                          
                 <!-- <button><a href="{{event.url}}">Article Link</a></button> -->
