--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-
+<!-- <mat-spinner></mat-spinner>
+<mat-progress-spinner value = "60"></mat-progress-spinner> -->
 <router-outlet></router-outlet>
 <!-- <app-footer></app-footer> -->
