--- a/src/app/sources/nyt/nyt.component.html
+++ b/src/app/sources/nyt/nyt.component.html
@@ -18,8 +18,6 @@
   <br>
   <br>
   <br>
-  <button class="btn btn-primary" (click)="fetchNyt()">View Articles
-  </button>
 </div>
 
 <body>
@@ -34,7 +32,8 @@
         </div>
         <div class="w3-twothird w3-container">
           <br>
-          <h4>The New York Times</h4>
+          <h4><a href ="https://www.nytimes.com/">The New York Times</a> </h4>
+
           <h2>{{event.title}}</h2>
           <h3>{{event.desc}}</h3>
           <a class="btn btn-primary" href="https://www.nytimes.com{{event.url}}" role="button">Article Link</a>
