--- a/src/app/sources/washington-post/washington-post.component.html
+++ b/src/app/sources/washington-post/washington-post.component.html
@@ -23,8 +23,6 @@
   <br>
   <br>
 
-  <button class="btn btn-primary" (click)="fetchWashingtonPost()">View Articles
-  </button>
 </div>
 
 <body>
@@ -39,7 +37,7 @@
         </div>
         <div class="w3-twothird w3-container">
           <br>
-          <h4>The Washigton Post</h4>
+          <h4><a href ="https://www.washingtonpost.com/">Washigton Post</a> </h4>
           <h2>{{event.title}}</h2>
           <h3>{{event.desc}}</h3>
           <a class="btn btn-primary" href="{{event.url}}" role="button">Article Link</a>
