added new homepage headlines and login.signup componenets

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
             <div class="content-column col-lg-6 col-md-12 col-sm-12 order-2">
                 <div class="inner-column">
                     <div class="sec-title">
-                        <span class="title">About Political News Co</span>
+                        <span class="title">About The Dawn of Democracys</span>
                         <h2>Bringing you the latest political news</h2>
                     </div>
                     <div class="text">Or website is 100% free.  We believe that if we can make you life just a little bit easier, then we have succeded.  At Political News Watch we strive to provide you with the latest up to date content about all things politics. By picking only the most recent articles from your favorite news sources, we stay current and up to date in the everchanging world of politics. </div>
