--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,8 +10,11 @@
     <a routerLink="washingtonPost">The Washington Post</a>
     <a routerLink="about">About Us</a>
     
-    
-</div>
+    <!-- <button (click)="onLoginClick()"
+    mat-flat-button color="primary">Login</button> -->
+   >
+  </div>  
+
 
 <!-- <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
     <div class="container-fluid">
