fully functional need to add loading spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+
+
 <app-navbar></app-navbar>
 <!-- <mat-spinner></mat-spinner>
 <mat-progress-spinner value = "60"></mat-progress-spinner> -->
 <router-outlet></router-outlet>
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
