--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <a routerLink="cnn">CNN</a>
     <a routerLink="nyt">The New York Times</a>
     <a routerLink="washingtonPost">The Washington Post</a>
-    <a routerLink="about">About Us</a>
+    <!-- <a routerLink="about">About Us</a> -->
     
     <!-- <button (click)="onLoginClick()"
     mat-flat-button color="primary">Login</button> -->
