--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
 	<link rel="icon" type="image/png" href="./assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Political News Co</title>
+	<title>Political News Network</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
 		name='viewport' />
@@ -25,7 +25,7 @@
 			<div class="pl-4 pr-0 h-100 tofront">
 				<div class="row justify-content-between">
 					<div class="col-md-6 pt-6 pb-6 align-self-center">
-						<h1 class="secondfont mb-3 font-weight-bold">The Dawn of Democracy</h1>
+						<h1 class="secondfont mb-3 font-weight-bold">Political News Network</h1>
 						<p class="mb-3">
 							Bringing you up to date content on all things politics!
 						</p>
