ready for deployment

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,8 @@
                         <span class="title">About The Political News Network</span>
                         <h2>Bringing you the latest political news</h2>
                     </div>
-                    <div class="text">Or website is 100% free.  We believe that if we can make you life just a little bit easier, then we have succeded.  At Political News Watch we strive to provide you with the latest up to date content about all things politics. By picking only the most recent articles from your favorite news sources, we stay current and up to date in the everchanging world of politics. </div>
+
+                    <div class="text">At Political News Network we strive to provide you with the latest up to date content about all things politics. By gathering only the most recent articles from your favorite news sources, we stay current and up to date in the everchanging world of politics. </div>
                    
                    
                 </div>
