--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
 					<div class="col-md-6 pt-6 pb-6 align-self-center">
 						<h1 class="secondfont mb-3 font-weight-bold">Political News Network</h1>
 						<p class="mb-3">
-							Bringing you up to date content on all things politics!
+							All your political news in one place.
 						</p>
 						<!-- <button (click)="onGetStartedClick()"
 						mat-flat-button color="warn">Get Started</button> -->
