added about to navbarr

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     <a routerLink="cnn">CNN</a>
     <a routerLink="nyt">The New York Times</a>
     <a routerLink="washingtonPost">The Washington Post</a>
+    <a routerLink="about">About Us</a>
     
    
   </div>  
